syntax = "proto3";

package contentstudio;

service ContentStudio {
  rpc GenerateLessons (LessonRequest) returns (LessonResponse);
}

message TopicContext {
  string topicId = 1;
  string topicName = 2;
  string topicDescription = 3;
  string topicLanguage = 4;
}

message LessonRequest {
  string courseId = 1;
  string moduleId = 2;
  TopicContext topic = 3;
  repeated string skills = 4;
  map<string, string> metadata = 5;
  string learnerId = 6;
}

message Lesson {
  string lessonId = 1;
  string lessonName = 2;
  string contentType = 3;
  string contentRef = 4;
  int32 order = 5;
}

message LessonResponse {
  repeated Lesson lessons = 1;
  string generatedAt = 2;
}


